[package]
name = "BTest"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version= "*", features = ["full"] }
serde = { version = "1.0", features = ["derive"]}
clap = { version = "3.1.12", features = ["derive"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
rust_decimal = "*"
futures-util = "*"
serde_json = "*"
url = "*"
